# Task_2_catch2

./: CMakeLists.txt  main.cpp
